2004-01-28  Hans Breuer  <hans@breuer.org>

	[Extented version for UML to C++ conversion by Dave Klotzbach, bug #155255]
	* plug-ins/xslt/dia-uml2cpp.xsl : (new file) ... handles associataions,
	generalization, dependancies, parameterized classes ...
	* plug-ins/xslt/styleshetts.xml : refernce it
	* plug-ins/xslt/dia-uml.xsl : handle more UML types uesd above

2004-01-28  Hans Breuer  <hans@breuer.org>

	* objects/UML/transition.c : fill out the extra_spacing struct 
	in the OrtConn member, in order to avoid artifacts when draggin 
	the transition. (patch by Peter Allin, bug #144956)

2004-01-15  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo.c : initialized the renderers default dash_length
	to something differnt than 0. Apparently there are case where Dia misses
	to appropriately set it before requesting a dashed line (simple line with
	arrow as described in bug #151716)

	* lib/dia_dirs.c : special casing for drive letters which I broke with
	the previous change

2005-01-13  Hans Breuer  <hans@breuer.org>

	* app/interface.c(create_sheet_page) : remved dead long time code

	* lib/propdialogs.c : removed pdtpp_is_visible_no_standard() prototype,
	it is availbale via header - which is the better style anyway

2004-12-31  Hans Breuer  <hans@breuer.org>

	* lib/dia_dirs.c(dia_get_canonical_path) : complete
	rewrite to handle something like /mnt/some/where/../else
	too. Workaround for bug #162637.
	* app/filedlg.c : call gtk_file_chooser_set_current_name()
	to workaround gtk_file_chooser_set_filename() not setting
	it if the file does not exist

	* sheets/Jackson.sheet.in app/menus.c : fixed typos
	(Frank Arnold, bug #161676)

2004-12-31  Steffen Macke <sdteffen@gmail.com>

	* doc/pl/*.xml: Added XML prolog
	* makefile.msc: Added libxslt, fixed libxml, libart

2004-10-29  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2004-12-29  Lars Clausen  <lars@raeder.dk>
