@@ -47,6 +47,8 @@ struct _State {
   Text *text;
 
   TextAttributes attrs;
+  Color line_color;
+  Color fill_color;
 };
 
 
@@ -116,9 +118,11 @@ static ObjectOps state_ops = {
 static PropDescription activity_props[] = {
   ELEMENT_COMMON_PROPERTIES,
 
+  PROP_STD_LINE_COLOUR_OPTIONAL, 
+  PROP_STD_FILL_COLOUR_OPTIONAL, 
   PROP_STD_TEXT_FONT,
   PROP_STD_TEXT_HEIGHT,
-  PROP_STD_TEXT_COLOUR,
+  PROP_STD_TEXT_COLOUR_OPTIONAL,
   { "text", PROP_TYPE_TEXT, 0, N_("Text"), NULL, NULL }, 
   
   PROP_DESC_END
@@ -135,6 +139,8 @@ state_describe_props(State *state)
 
 static PropOffset state_offsets[] = {
   ELEMENT_COMMON_PROPERTIES_OFFSETS,
+  {"line_colour",PROP_TYPE_COLOUR,offsetof(State,line_color)},
+  {"fill_colour",PROP_TYPE_COLOUR,offsetof(State,fill_color)},
   {"text",PROP_TYPE_TEXT,offsetof(State,text)},
   {"text_font",PROP_TYPE_FONT,offsetof(State,attrs.font)},
   {"text_height",PROP_TYPE_REAL,offsetof(State,attrs.height)},
@@ -224,8 +230,10 @@ state_draw(State *state, DiaRenderer *renderer)
    p1.y = y;
    p2.x = x + w;
    p2.y = y + h;
-   renderer_ops->fill_rounded_rect(renderer, &p1, &p2, &color_white, 1.0);
-   renderer_ops->draw_rounded_rect(renderer, &p1, &p2, &color_black, 1.0);
+   renderer_ops->fill_rounded_rect(renderer, &p1, &p2,
+				   &state->fill_color, 1.0);
+   renderer_ops->draw_rounded_rect(renderer, &p1, &p2,
+				   &state->line_color, 1.0);
    
    text_draw(state->text, renderer);
 }
@@ -309,6 +317,9 @@ state_create_activity(Point *startpoint,
   elem->corner = *startpoint;
   elem->width = STATE_WIDTH;
   elem->height = STATE_HEIGHT;
+
+  state->line_color = attributes_get_foreground();
+  state->fill_color = attributes_get_background();
 
   font = dia_font_new_from_style (DIA_FONT_SANS, 0.8);
   p = *startpoint;
